Added rerender endpoint to ArticleRevisionsApiController
